backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
  namespace: mongo-example
spec:
  rules:
    - host: pcd-mongo.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: mongo-express-service
                port: 
                  number: 8081
